# smallest-enclosing-ball

./: Cargo.toml
projects/enclosing-ball/: Cargo.toml
projects/enclosing-ball/src/: errors.rs  lib.rs
projects/enclosing-ball/src/dim2/: mod.rs
projects/enclosing-ball/src/welzl/: mod.rs
projects/enclosing-ball/src/welzl/dim2/: mod.rs
projects/enclosing-ball/tests/: main.rs
projects/enclosing-box/: Cargo.toml
projects/enclosing-box/src/welzl/dim2/: mod.rs
