[package]
name = "smallest-enclosing-ball"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
shape-core = "0.1.16"

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
