[package]
name = "smallest-enclosing-ball"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "..."
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dependencies.shape-core]
version = "0.1.16"
path = 'C:\Users\Dell\CLionProjects\shape-rs\projects\shape-core'

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
