[package]
name = "smallest-enclosing-box"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Calculate the smallest enclosing circle or sphere of a shape"
repository = "https://github.com/oovm/smallest-enclosing-ball/tree/dev/projects/enclosing-box"
documentation = "https://docs.rs/smallest-enclosing-box"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]

[dependencies.shape-core]
version = "0.1.17"

[dev-dependencies]

[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
